<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/CornflowerBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="@mipmap/ic_launcher"
       android:layout_marginLeft="150dp"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@color/Gold"
        android:layout_marginLeft="125dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"

        >

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newgame"
        android:id="@+id/newgame"
        android:padding="20dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shap2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/human"
        android:background="@drawable/shap2"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/against"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about"
        android:padding="20dp"
        android:background="@drawable/shap2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit"

        android:padding="20dp"
        android:background="@drawable/shap2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

</LinearLayout>