<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/CornflowerBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="170dp"
            android:background="@mipmap/ic_launcher"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/player_text"

            android:layout_marginLeft="93dp"
            android:textSize="25sp"
            android:textColor="@color/Gold"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player1"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Gold"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:id="@+id/textplayer1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginRight="20dp"
                android:hint="Name of first player"
                android:imeOptions="actionNext"
                android:ems="10"
                android:id="@+id/editTextplayer1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"

            android:layout_height="wrap_content">

            <TextView
                android:text="@string/player2"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Gold"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:id="@+id/textplayer2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Name of second player"
                android:layout_marginRight="20dp"
                android:imeOptions="actionNext"
                android:ems="10"
                android:id="@+id/editTextPlayer2"
                android:layout_weight="1" />
        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_height="match_parent"
        >
        <Button
            android:text="@string/player_button2"
            android:layout_width="96dp"
            android:layout_height="56dp"
            android:id="@+id/back"
            android:background="@drawable/shap2"
            />
        <Button
            android:text="@string/player_button"
            android:layout_width="96dp"
            android:layout_height="56dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/next"

            android:background="@drawable/shap2"
             />

    </LinearLayout>

    </LinearLayout>
</RelativeLayout>